ajuste volume node_modules

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,12 +5,12 @@ services:
     build:
       context: node
     container_name: app
-    entrypoint: wait-for db:3306 -t 250 -- ./start.sh
     restart: always
     networks: 
       - node-network
     volumes:
       - ./node:/usr/src/app
+      - /usr/src/app/node_modules
     tty: true
     # ports:
     #   - "3000:3000"
