--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -6,11 +6,11 @@ COPY . .
 
 RUN npm install
 
-RUN apt update && \
-    apt install -y wget netcat-traditional && \
-    wget -q -O /usr/bin/wait-for https://raw.githubusercontent.com/eficode/wait-for/v2.2.3/wait-for && \
-    chmod +x /usr/bin/wait-for
+# RUN apt update && \
+#     apt install -y wget netcat-traditional && \
+#     wget -q -O /usr/bin/wait-for https://raw.githubusercontent.com/eficode/wait-for/v2.2.3/wait-for && \
+#     chmod +x /usr/bin/wait-for
 
 EXPOSE 3000
- 
+
 CMD [ "npm", "start" ]
